test/libsolidity/syntaxTests/nameAndTypeResolution/no_mappings_in_memory_array.sol
contract C {
    function f() public {
        mapping(uint=>uint)[] memory x;
    }
}
// ----
// TypeError: (47-77): Type mapping(uint256 => uint256)[] memory is only valid in storage.
